--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
 	"facebookAccount": {
-		"email": "",
-		"password": "",
+		"email": "cliffbotbeluga@gmail.com",
+		"password": "jsjdjdhhdh",
 		"2FASecret": "",
 		"i_user": "",
 		"proxy": null,
